--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node-sass": "~2.0.1",
     "grunt": "~0.4.5",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "~0.18.0"
+    "grunt-sass": "~0.18.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-uglify": "~0.9.1"
   }
 }
