--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "jquery-ui": "~1.11.4",
     "jqueryui-touch-punch": "*",
     "moment": "~2.10.2",
-    "fullcalendar": "~2.3.1"
+    "fullcalendar": "~2.3.1",
+    "chosen": "~1.4.2"
   }
 }
